# circuit-finder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  graph.html  pyproject.toml
.github/workflows/: release.yaml
circuit_finder/: circuit.py  circuit_analysis.py  constants.py  data_loader.py  download.py  feature_dashboards.py  jacob_scratch.py  metrics.py  neuronpedia.py  plotting.py  transcoder_replacement_ctx.py  types.py  utils.py
circuit_finder/auto_circuit/: circuit_discovery.py
circuit_finder/core/: __init__.py  hooked_sae.py  hooked_sae_config.py  hooked_transcoder.py  hooked_transcoder_config.py  types.py
circuit_finder/data/: ioi.py
circuit_finder/experiments/: IOI.ipynb  analysis_denoising_curves.ipynb  graph.html  (+33 more)
datasets/: animal_diet_generator.py  capital_cities_generator.py  docstring_generator.py  gender_bias.json  gender_bias_preprocess.py  graph.html  greaterthan_generator.py  micro_model_input_generator.py  subject_verb_agreement.json  sva_process.py
eap/: eap_graph.py  eap_wrapper.py
examples/: attribution_patching_with_sae.py  leap_demo.py  print_dataset.py  splicing_model_with_all_saes.py  splicing_model_with_resid_and_attn_saes.py
notebooks/: eap.ipynb  eap_analytic.ipynb  eap_ioi_demo.ipynb  feature_relations.ipynb  get_mean_ablation.ipynb  hooked_transcoder_demo.ipynb  inspect_hooked_sae_transformer.ipynb  inspect_hooked_sae_transformer.py  inspect_transcoders.ipynb  ioi_dataset.py  viz_eap_graph.ipynb
scripts/: run_sweeps.sh  run_sweeps_final.sh
tests/: conftest.py  helpers.py  test_init.py  test_metrics.py
(+271 files in other folders)
