[project]
dependencies = [
    "transcoders-slim>=0.2.0",
    "ipykernel>=6.29.4",
    "transformer-lens>=1.14.0",
    "sae-lens==2.1.3",
    "einops>=0.6.0",
    "huggingface-hub>=0.23.0",
    "syrupy>=4.6.1",
    "networkx>=3.3",
    "ruff>=0.4.3",
    "pytest>=8.2.0",
    "pyright>=1.1.361",
    "pre-commit>=3.7.1",
    "seaborn>=0.13.2",
    "simple-parsing>=0.1.5",
    "pyvis>=0.3.2",
]
name = "circuit-finder"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Daniel Tan", email = "dtch1997@users.noreply.github.com" },
    { name = "Daniel CH Tan", email = "dtch1997@users.noreply.github.com" },
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.ruff]
line-length = 88
lint.select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I",
]
exclude = ["third_party", ".venv"]
lint.ignore = ["F841", "E501", "E741", "I001", "E731", "F722"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["circuit-finder"]
force-single-line = true
single-line-exclusions = ["typing"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["circuit_finder"]

[tool.semantic_release]
version_variables = [
    "circuit_finder/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
